[gd_scene load_steps=77 format=3 uid="uid://dfgof8pxal3hl"]

[ext_resource type="Texture2D" uid="uid://deb4m2n5k7ucx" path="res://Assets/Sprites/Player/Beastmaster/Beastmaster_idle.png" id="1_ft8w5"]
[ext_resource type="Script" uid="uid://boynubp0bfq22" path="res://Scripts/Player/Player.gd" id="1_h54ih"]
[ext_resource type="Texture2D" uid="uid://yahuy5anl4ui" path="res://Assets/Sprites/Player/Beastmaster/Beastmaster_walk.png" id="2_h54ih"]
[ext_resource type="PackedScene" uid="uid://dajvircxqlavl" path="res://Scenes/Projectiles/Arrow.tscn" id="2_ude3g"]
[ext_resource type="PackedScene" uid="uid://dfmjiasifebcu" path="res://Scenes/Effects/HealParticles.tscn" id="3_4wape"]
[ext_resource type="PackedScene" uid="uid://bthcdsld7ke43" path="res://Scenes/Effects/LevelUpParticles.tscn" id="4_t26db"]
[ext_resource type="Texture2D" uid="uid://cnhb14clkq5h8" path="res://Assets/Sprites/Player/Beastmaster/Beastmaster_cast.png" id="5_0u84n"]
[ext_resource type="Script" uid="uid://x20yyse5f7xf" path="res://Scripts/UI/Bar2D.gd" id="5_bar2d"]
[ext_resource type="Script" uid="uid://x31owgd5op8m" path="res://Scripts/Player/AttackController.gd" id="6_ac"]
[ext_resource type="Texture2D" uid="uid://d2uvryhhyx1pt" path="res://Assets/Sprites/Player/Beastmaster/Beastmaster_die.png" id="6_esmjy"]
[ext_resource type="Texture2D" uid="uid://puv804neduco" path="res://Assets/Sprites/Player/Beastmaster/Beastmaster_falling.png" id="7_6tu5v"]
[ext_resource type="Script" uid="uid://cajnb7xc31tbf" path="res://Scripts/Player/HealthComponent.gd" id="7_hc"]
[ext_resource type="Texture2D" uid="uid://kdljgw5fw1yk" path="res://Assets/Sprites/Player/Beastmaster/Beastmaster_hit.png" id="8_spxdj"]
[ext_resource type="Script" uid="uid://detcnx0ixtelh" path="res://Scripts/Player/Feedback.gd" id="10_ji083"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0objx"]
atlas = ExtResource("5_0u84n")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_w71ue"]
atlas = ExtResource("5_0u84n")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e6p3"]
atlas = ExtResource("5_0u84n")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb677"]
atlas = ExtResource("5_0u84n")
region = Rect2(0, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cj01"]
atlas = ExtResource("6_esmjy")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2g7t"]
atlas = ExtResource("6_esmjy")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_io2mu"]
atlas = ExtResource("6_esmjy")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5iqy"]
atlas = ExtResource("6_esmjy")
region = Rect2(0, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t5qx"]
atlas = ExtResource("7_6tu5v")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rd5p"]
atlas = ExtResource("7_6tu5v")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwmao"]
atlas = ExtResource("7_6tu5v")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xdrn"]
atlas = ExtResource("7_6tu5v")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wid83"]
atlas = ExtResource("7_6tu5v")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7gci"]
atlas = ExtResource("7_6tu5v")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6t50"]
atlas = ExtResource("7_6tu5v")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rswy"]
atlas = ExtResource("7_6tu5v")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbjyn"]
atlas = ExtResource("7_6tu5v")
region = Rect2(192, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw74r"]
atlas = ExtResource("7_6tu5v")
region = Rect2(0, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tf3ct"]
atlas = ExtResource("7_6tu5v")
region = Rect2(96, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_to4uw"]
atlas = ExtResource("7_6tu5v")
region = Rect2(192, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7cr0"]
atlas = ExtResource("8_spxdj")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrod0"]
atlas = ExtResource("8_spxdj")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcbn2"]
atlas = ExtResource("8_spxdj")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjq2i"]
atlas = ExtResource("8_spxdj")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ui31c"]
atlas = ExtResource("8_spxdj")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_karlm"]
atlas = ExtResource("8_spxdj")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2avfq"]
atlas = ExtResource("8_spxdj")
region = Rect2(0, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2y64"]
atlas = ExtResource("8_spxdj")
region = Rect2(96, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dewec"]
atlas = ExtResource("1_ft8w5")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ixxa"]
atlas = ExtResource("1_ft8w5")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn08x"]
atlas = ExtResource("1_ft8w5")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_52ee3"]
atlas = ExtResource("1_ft8w5")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhhdu"]
atlas = ExtResource("1_ft8w5")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_megsn"]
atlas = ExtResource("1_ft8w5")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoq75"]
atlas = ExtResource("1_ft8w5")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbbd"]
atlas = ExtResource("1_ft8w5")
region = Rect2(288, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_glx4g"]
atlas = ExtResource("1_ft8w5")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_miouo"]
atlas = ExtResource("1_ft8w5")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3h8g"]
atlas = ExtResource("1_ft8w5")
region = Rect2(192, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e7my"]
atlas = ExtResource("1_ft8w5")
region = Rect2(288, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_arntx"]
atlas = ExtResource("1_ft8w5")
region = Rect2(0, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lslt6"]
atlas = ExtResource("1_ft8w5")
region = Rect2(96, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulo2v"]
atlas = ExtResource("1_ft8w5")
region = Rect2(192, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iu4k"]
atlas = ExtResource("1_ft8w5")
region = Rect2(288, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0x7a"]
atlas = ExtResource("2_h54ih")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v66d"]
atlas = ExtResource("2_h54ih")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x63xi"]
atlas = ExtResource("2_h54ih")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2e8t"]
atlas = ExtResource("2_h54ih")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qidb7"]
atlas = ExtResource("2_h54ih")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_70hv0"]
atlas = ExtResource("2_h54ih")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8flut"]
atlas = ExtResource("2_h54ih")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7x0b"]
atlas = ExtResource("2_h54ih")
region = Rect2(288, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_utwlt"]
atlas = ExtResource("2_h54ih")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kih0c"]
atlas = ExtResource("2_h54ih")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyrkg"]
atlas = ExtResource("2_h54ih")
region = Rect2(192, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c43xd"]
atlas = ExtResource("2_h54ih")
region = Rect2(288, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_avx33"]
atlas = ExtResource("2_h54ih")
region = Rect2(0, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxg2u"]
atlas = ExtResource("2_h54ih")
region = Rect2(96, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xixlo"]
atlas = ExtResource("2_h54ih")
region = Rect2(192, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfbt0"]
atlas = ExtResource("2_h54ih")
region = Rect2(288, 288, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_qbkls"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0objx")
}],
"loop": true,
"name": &"cast_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w71ue")
}],
"loop": true,
"name": &"cast_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e6p3")
}],
"loop": true,
"name": &"cast_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb677")
}],
"loop": true,
"name": &"cast_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cj01")
}],
"loop": true,
"name": &"die_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2g7t")
}],
"loop": true,
"name": &"die_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_io2mu")
}],
"loop": true,
"name": &"die_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5iqy")
}],
"loop": true,
"name": &"die_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t5qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rd5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwmao")
}],
"loop": true,
"name": &"falling_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xdrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wid83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7gci")
}],
"loop": true,
"name": &"falling_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6t50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rswy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbjyn")
}],
"loop": true,
"name": &"falling_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw74r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tf3ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_to4uw")
}],
"loop": true,
"name": &"falling_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7cr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrod0")
}],
"loop": true,
"name": &"hit_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcbn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjq2i")
}],
"loop": true,
"name": &"hit_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ui31c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_karlm")
}],
"loop": true,
"name": &"hit_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2avfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2y64")
}],
"loop": true,
"name": &"hit_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dewec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ixxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn08x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52ee3")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhhdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_megsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoq75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksbbd")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glx4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miouo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3h8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e7my")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_arntx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lslt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulo2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iu4k")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0x7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v66d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x63xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2e8t")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qidb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70hv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8flut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7x0b")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_utwlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kih0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c43xd")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_avx33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxg2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xixlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfbt0")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kyqiw"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_h54ih")
attack_range = 150.0
arrow_scene = ExtResource("2_ude3g")
heal_particles_scene = ExtResource("3_4wape")
levelup_particles_scene = ExtResource("4_t26db")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_qbkls")
animation = &"cast_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_kyqiw")

[node name="HealthBar2D" type="Node2D" parent="."]
z_index = 100
position = Vector2(0, -28)
scale = Vector2(0.75, 0.75)
script = ExtResource("5_bar2d")
size = Vector2(50, 5)
fill_color = Color(1, 0.1, 0, 1)
hide_when_full = true

[node name="SpecialBar2D" type="Node2D" parent="."]
z_index = 100
position = Vector2(0, 27)
scale = Vector2(0.75, 0.75)
script = ExtResource("5_bar2d")
size = Vector2(44, 4)
fill_color = Color(0.58, 0.3, 0.9, 1)

[node name="StaminaBar2D" type="Node2D" parent="."]
z_index = 100
position = Vector2(0, 35)
scale = Vector2(0.75, 0.75)
script = ExtResource("5_bar2d")
size = Vector2(44, 4)
fill_color = Color(1, 0.85, 0, 1)
hide_when_full = true

[node name="AttackController" type="Node" parent="."]
script = ExtResource("6_ac")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("7_hc")

[node name="Feedback" type="Node" parent="."]
script = ExtResource("10_ji083")
